tests/programs/invalid/InvalidAbstractMethod.java
public final class InvalidAbstractMethod {
    public abstract void abstractMethod();

    public abstract void anotherMethod();
    public InvalidAbstractMethod() {
        unction1();
        function2();
    }

    public abstract validAbstractMethod();

    int j = 0;
}
